--- a/templates/minesweeper.html
+++ b/templates/minesweeper.html
@@ -533,7 +533,7 @@
         });
 
         //设置总榜页面地址并送出用户名数据作为鉴别
-        var totalranklink='/seealldata?uname='+this_cookie;
+        var totalranklink='/ranks?uname='+this_cookie;
         document.getElementById("totallink").href = totalranklink;
 
 
