--- a/templates/login.html
+++ b/templates/login.html
@@ -12,8 +12,7 @@
             left: 0;
             top: 0;
             bottom: 0;
-            margin: auto;
-            margin-top: 200px;
+            margin: 200px auto auto;
             font-size: 18px;
             width: 650px;
             height: 330px;
@@ -76,7 +75,7 @@
     <div class="form_input2">
 			<span>
 				<font size="5">密码：</font>
-			</span> <input class="inputs" type="password" id="password" onkeydown="if(event.keyCode==13) {login()}">
+			</span> <input class="inputs" type="password" id="password" onkeydown="if(event.keyCode===13) {login()}">
     </div>
     <div class="bnt" onclick="login()">
         <button id="login_bnt">登录</button>
@@ -86,27 +85,25 @@
             //点击回车事件
             function enter(event) {
                 var event = window.event ? window.event : event
-                if (event.keyCode == 13) {
+                if (event.keyCode === 13) {
                     $("#login_bnt").click();
                 }
             }
 
             //登录事件
             function login() {
-                var username = document.getElementById("id").value;
-                var password = document.getElementById("password").value;
-                socket = io.connect('ws://' + document.domain + ':' + location.port + '/login', {
+                let username = document.getElementById("id").value;
+                let password = document.getElementById("password").value;
+                let socket = io.connect('ws://' + document.domain + ':' + location.port + '/login', {
                     reconnectionDelayMax: 10000,
                     query: {
                         "username": username,
                         "password": password
                     }
                 });
-
-
                 //接收服务器信息，传送cookie
                 socket.on("reply", (cookie) => {
-                    if (cookie == "deny") {
+                    if (cookie === "deny") {
                         socket.disconnect();
                         alert("用户名或密码错误！")
                     } else {
@@ -114,19 +111,10 @@
                     }
                 })
             }
+
         </script>
     </div>
 
-    <div class="cha">
-        <a href='/register'> 没有账号？注册一个 </a>
-    </div>
-
-    <script>
-        //接收register.html的注册信息
-        var name = decodeURI(document.URL);
-        name = name.slice(name.indexOf("=") + 1);
-        if (name == "1") alert("注册成功，请登录！");
-    </script>
 </div>
 </body>
 
